# elasticlunr-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
benches/: bench-holistic.rs  bench.rs
examples/: export_json.rs  out_zh.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_en.rs
js/: lunr.ar.js
src/: config.rs  document_store.rs  index.rs  inverted_index.rs  lib.rs  pipeline.rs  stemmer.rs  test_helpers.rs
src/lang/: ar.rs  common.rs  da.rs  de.rs  du.rs  en.rs  es.rs  fi.rs  fr.rs  hu.rs  it.rs  ja.rs  ko.rs  mod.rs  no.rs  pt.rs  ro.rs  ru.rs  sv.rs  tr.rs  zh.rs
tests/: compare_json.rs  example.json  out.json  searchindex_fixture.json  searchindex_fixture_ja.json  test-compare.rs  test-index.rs  test-lang.rs
tests/data/: hu.out.txt  ja.out.txt  ko.out.txt  zh.out.txt
tests/lunr-fixture-gen/: index.js  package-lock.json  package.json
