[package]
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
license = "MIT/Apache-2.0"
name = "elasticlunr-rs"
version = "2.0.0"
description = "A partial port of elasticlunr.js to Rust"
documentation = "https://docs.rs/elasticlunr-rs"
repository = "https://github.com/mattico/elasticlunr-rs"
keywords = ["search", "index", "indexing", "lunr", "elasticlunrjs"]

[lib]
name = "elasticlunr"

[dev-dependencies]
maplit = "1"

[dependencies]
lazy_static = "1"
regex = "0.2.7" # First version to include unicode escape sequences
rust-stemmers = "1"
serde = "1" 
serde_derive = "1.0.34" # First verstion to support #[serde(flatten)]
serde_json = "1"
strum = "0.9"
strum_macros = "0.9"

[features]
default = []
nightly = ["bench"]
bench = []
