[package]
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
license = "MIT/Apache-2.0"
name = "elasticlunr-rs"
version = "2.3.8"
description = "A partial port of elasticlunr.js to Rust"
documentation = "https://docs.rs/elasticlunr-rs"
repository = "https://github.com/mattico/elasticlunr-rs"
keywords = ["search", "index", "indexing", "lunr", "elasticlunrjs"]
exclude = ["tests/lunr-fixture-gen/**"]
readme = "README.md"
maintenance = { status = "passively-maintained" }

[badges]
travis-ci = { repository = "mattico/elasticlunr-rs" }

[lib]
name = "elasticlunr"

[dev-dependencies]
maplit = "1"

[dependencies]
lazy_static = "1"
regex = "1"
rust-stemmers = { version = "1", optional = true }
serde = "1"
serde_derive = "1.0.34" # First verstion to support #[serde(flatten)]
serde_json = "1"
strum = "0.16"
strum_macros = "0.16"
jieba-rs = { version = "0.5.0", optional = true }
lindera = { version = "0.3.4", optional = true }

[features]
default = ["languages"]
nightly = ["bench"]
bench = []

languages = ["da", "de", "du", "es", "fi", "fr", "it", "pt", "ro", "ru", "sv", "tr", "zh", "ja"]
da = ["rust-stemmers"]
de = ["rust-stemmers"]
du = ["rust-stemmers"]
es = ["rust-stemmers"]
fi = ["rust-stemmers"]
fr = ["rust-stemmers"]
it = ["rust-stemmers"]
pt = ["rust-stemmers"]
ro = ["rust-stemmers"]
ru = ["rust-stemmers"]
sv = ["rust-stemmers"]
tr = ["rust-stemmers"]
zh = ["jieba-rs"]
ja = ["lindera"]
